[package]
name = "reporterr"
version = "0.1.0"
edition = "2021"
authors = ["Rolandas Kisieliauskas"]
rust-version = "1.56"
description = "Errors reporter"

license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
